adding more questions

--- a/question.html
+++ b/question.html
@@ -22,7 +22,28 @@ let odd=(number)=>{
         }
     }
 }
-odd(20)
+odd(20)/*let input =parseInt(prompt("Enter the value of n:"));
+let sum=0;
+let sumseries=(n)=>{
+    for(var i=1;i<=n;i++){
+        sum+=i;
+        document.write("Required sum of series is:" , sum);
+    }
+}
+sumseries(input);*/
+
+// WAP to find the sum of odd nos.
+//let sumodd = parseInt(prompt("Enter the value of n:"));
+//let summ=0;
+//let sumoddnumber=(n)=>{
+ //   for(var i=1;i<=n;i++){
+//        if(i%2!==0){
+        //    summ+=i;
+      //      console.log("required sum:",summ);
+    //    }
+  //  }
+//}
+//sumoddnumber(sumodd);
 	    //WAP to find sum and average of a given series of number
  let average=parseInt(prompt("Enter the value of n:"));
  let summm=0;
